# dsnap

./: .dockerignore  .gitignore  Dockerfile.mount  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  scan.sh  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-deploy.yml  python-package.yml
dsnap/: __init__.py  __main__.py  ebs.py  ec2.py  main.py  prompt.py  snapshot.py  utils.py
dsnap/files/: Vagrantfile  Vagrantfile.trusted
dsnap/templates/: Vagrantfile
events/: snapshot-created.json
pysnap/: __main__.py  main.py  snapshot.py
tests/: test_aws.py  test_dsnap.py  test_prompt.py  test_snapshot.py
