[tool.poetry]
name = "dsnap"
version = "0.1.0"
description = "Utility for downloading EBS snapshots using the EBS Direct API's"
authors = ["Ryan Gerstenkorn <ryan.gerstenkorn@rhinosecuritylabs.com>"]
readme = "README.md"

[tool.poetry.scripts]
dsnap = "dsnap.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"
boto3 = "^1.16.63"
boto3-stubs = {extras = ["ebs", "ec2"], version = "^1.16.63"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
mypy = "^0.800"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
