[tool.poetry]
name = "dsnap"
version = "v0.1.10"
description = "Utility for downloading EBS snapshots using the EBS Direct API's"
authors = ["Ryan Gerstenkorn <ryan.gerstenkorn@rhinosecuritylabs.com>"]
readme = "README.md"

[tool.poetry.scripts]
dsnap = "dsnap.main:app"

[tool.poetry.dependencies]
python = "^3.6"
boto3 = "^1.16.0"
typer = { version = "^0.3.2", optional = true }

# We don't depend on this directly but make sure 1.26.4 or newer get's installed.
#   https://github.com/advisories/GHSA-5phf-pp7p-vc2r
urllib3 = "^1.26.4"

[tool.poetry.extras]
cli = ["typer"]
scannerd = ["cfn-lint", "aws-sam-cli"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
mypy = "^0.800"
boto3-stubs = {extras = ["ebs", "ec2"], version = "^1.16.63"}
moto = {extras = ["ebs", "ec2"], version = "^1.3.16"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
